[package]
name = "rts-rust-assignment"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.9"
chrono = { version = "0.4", features = ["serde"] }
rand = {version = "0.8", features = ["std_rng"]}
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
