[package]
name = "rts-rust-assignment"
version = "0.1.0"
edition = "2024"

[dependencies]
lapin = "3.0.0"
tokio = { version = "1.46.1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1.0.219", features = ["derive"] }
bincode = "1.3"
flate2 = "1.1.2"
log = "0.4.27"
env_logger = "0.11.8"
chrono = "0.4.41"