[package]
name = "rts-rust-assignment"
version = "0.1.0"
edition = "2024"

[dependencies]
lapin = "3.0.0"
tokio = { version = "1.46.1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1.0.219", features = ["derive"] }
bincode = "1.3"
flate2 = "1.1.2"
log = "0.4.27"
env_logger = "0.11.8"
chrono = { version = "0.4.41", features = ["serde"] }
rand = {version = "0.9.2", features = ["std_rng"]}
quanta = "0.12.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"]}
tracing-appender = "0.2"
serde_json = "1.0.143"
min-max-heap = "1.3.0"
sysinfo = "0.30"

[dev-dependencies]
criterion = {version= "0.7.0", features = ["html_reports"]}
bma-benchmark = "0.0.24"
